--- a/index.html
+++ b/index.html
@@ -3,26 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
 <body>
-    <div><p id="display">      </p></div>
-    <button id="1">1</button>
-    <button id="2">2</button>
-    <button id="3">3</button>
-    <button id="4">4</button>
-    <button id="5">5</button>
-    <button id="6">6</button>
+    <h1 style="font-size: 50px;">Calculator</h1>
+    <div id="calculator">
+    <div id="display-div"><p id="display"></p></div>
+    <div id="buttons">
+    <button id="C">AC</button>
+    <button id="change">+/-</button>
+    <button id="percentage">%</button>
+    <button id="divide">/</button>
     <button id="7">7</button>
     <button id="8">8</button>
     <button id="9">9</button>
-    <button id="0">0</button>
-    <button id="+">+</button>
-    <button id="-">-</button>
-    <button id="x">x</button>
-    <button id="/">/</button>
+    <button id="multiply">*</button>
+    <button id="4">4</button>
+    <button id="5">5</button>
+    <button id="6">6</button>
+    <button id="add">+</button>
+    <button id="1">1</button>
+    <button id="2">2</button>
+    <button id="3">3</button>
+    <button id="subtract">-</button>
+    <button id="0" style="width: 175px;">0</button>
+    <button id=".">.</button>
     <button id="=">=</button>
-    <button id="C">C</button>
+</div>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
